<resources>
    <string name="app_name">Calculator</string>
    <string name="add">ADD</string>
    <string name="subtract">Subtract</string>
    <string name="multiply">MULTIPLY</string>
    <string name="divide">DIVIDE</string>
    <string name="result">Result</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="enter_second_number">Enter Second Number</string>
</resources>