<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/enter_first_number"
        android:inputType="number"
        android:textColorHint="#757575"
        android:textColorLink="@color/black"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/enter_second_number"
        android:textColorHint="#757575"
        android:inputType="number"
        tools:ignore="TextContrastCheck"
        android:autofillHints="" />

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:text="@string/add"
        tools:layout_editor_absoluteX="222dp"
        tools:layout_editor_absoluteY="332dp" />

    <Button
        android:id="@+id/sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:text="@string/subtract"
        tools:layout_editor_absoluteX="230dp"
        tools:layout_editor_absoluteY="252dp" />

    <Button
        android:id="@+id/mult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:text="@string/multiply"
        tools:layout_editor_absoluteX="233dp"
        tools:layout_editor_absoluteY="168dp" />

    <Button
        android:id="@+id/div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:text="@string/divide"
        tools:layout_editor_absoluteX="233dp"
        tools:layout_editor_absoluteY="94dp" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="295dp"
        android:layout_height="67dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/result"
        android:textColorHint="#757575"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

</LinearLayout>